# Cpp-labs

laby/lab1/: zadanie1.cpp  zadanie2.cpp
laby/lab2/: main.cpp  obiekty.cpp  obiekty.h
laby/lab3/: CMakeLists.txt  library.cpp  library.h  main.cpp
laby/lab4/: CMakeLists.txt  Data.cpp  Data.h  Kierownik.cpp  Kierownik.h  Osoba.cpp  Osoba.h  Pracownik.cpp  Pracownik.h  Stazysta.cpp  Stazysta.h  main.cpp
laby/lab5/: List.h  main.cpp
laby/lab6/: main.cpp
